# nanorunner

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TESTING.md  nanopore_simulator.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
docs/: README.md  audit-2026-04-29-orphans-simplification.md  getting-started.md  quickstart.md  test-coverage-report.md  testing-strategy.md  testing.md  troubleshooting.md
docs/archive/: README.md
docs/archive/plans/: 2026-02-25-simplification-implementation.md
docs/guides/: generate.md  pipeline-integration.md  replay.md  timing-models.md
docs/plans/: 2026-02-05-expanded-mocks-design.md  2026-02-05-expanded-mocks-implementation.md  2026-02-05-species-mocks-design.md  2026-02-05-species-mocks-implementation.md  2026-02-25-simplification-design.md
docs/reference/: cli.md  configuration.md  troubleshooting.md
examples/: 01_basic_simulation.py  02_timing_models.py  03_parallel_processing.py  04_configuration_profiles.py  05_pipeline_integration.py  06_practical_genome_test.py  README.md
examples/sample_data/multiplex/barcode01/: reads.fastq
examples/sample_data/multiplex/barcode02/: reads.fastq
examples/sample_data/singleplex/: sample1.fastq  sample2.fastq
nanopore_simulator/: __init__.py  adapters.py  cli.py  cli_generate.py  cli_helpers.py  cli_replay.py  cli_utils.py  config.py  deps.py  detection.py  executor.py  fastq.py  generators.py  manifest.py  mocks.py  monitoring.py  profiles.py  runner.py  species.py  timing.py
nanopore_simulator/cli/: __init__.py  main.py
nanopore_simulator/core/: __init__.py  adapters.py  config.py  deps.py  detector.py  fastq.py  generators.py  mocks.py  monitoring.py  profiles.py  simulator.py  species.py  timing.py
nanopore_simulator_v2/: __init__.py  cli.py  config.py  deps.py  executor.py  fastq.py  generators.py  manifest.py  mocks.py  monitoring.py  profiles.py  runner.py  species.py
test_data/multiplex/barcode01/: reads.fastq
test_data/multiplex/unclassified/: unassigned.fastq
test_data/singleplex/: sample1.fastq  sample1.pod5
tests/: __init__.py  conftest.py  test_adapters.py  test_adapters_coverage.py  test_atomic_move.py  test_cli.py  test_cli_additional_coverage.py  test_cli_coverage.py  test_cli_download.py  test_cli_enhanced.py  test_cli_helpers.py  test_cli_species.py  test_config.py  test_config_coverage.py  test_coverage_boost.py  test_deps.py  test_detection.py  test_detector.py  test_edge_cases.py  test_empty_source_exit_code.py  test_enhanced_monitoring.py  test_executor.py  test_fastq.py  test_generate_integration.py  test_generators.py  test_integration.py  test_manifest.py  test_mocks.py  test_monitoring.py  test_monitoring_additional_coverage.py  test_monitoring_coverage.py  test_monitoring_eta_and_detailed.py  test_parallel_processing.py  test_performance.py  test_practical.py  test_profiles.py  test_realistic_edge_cases.py  test_realistic_long_running.py  test_realistic_scenarios.py  test_rechunk.py  (+12 more)
tests/fixtures/: __init__.py  config_fixtures.py  data_fixtures.py  file_fixtures.py  monitoring_fixtures.py  realistic_data_fixtures.py
tests_v2/: test_adapters.py  test_cli.py  test_config.py  test_deps.py  test_detection.py  test_executor.py  test_fastq.py  test_generators.py  test_integration.py  test_manifest.py  test_mocks.py  test_monitoring.py  test_profiles.py  test_runner.py  test_species.py  test_timing.py
