[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanorunner"
version = "3.1.0"
description = "Comprehensive nanopore sequencing simulator with timing models, parallel processing, and real-time monitoring for bioinformatics pipeline testing"
readme = "README.md"
dependencies = [
    "typer>=0.9.0",
]
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "FOI Bioinformatics", email = "bioinformatics@foi.se"},
]
maintainers = [
    {name = "FOI Bioinformatics", email = "bioinformatics@foi.se"},
]
keywords = ["nanopore", "sequencing", "bioinformatics", "simulation", "oxford-nanopore", "fastq", "timing-models", "parallel-processing", "real-time-monitoring", "pipeline-testing", "nanometa"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/FOI-Bioinformatics/nanorunner"
Repository = "https://github.com/FOI-Bioinformatics/nanorunner"
Documentation = "https://github.com/FOI-Bioinformatics/nanorunner#readme"
"Bug Tracker" = "https://github.com/FOI-Bioinformatics/nanorunner/issues"

[project.scripts]
nanorunner = "nanopore_simulator.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
]
enhanced = [
    "psutil>=5.8.0",  # For resource monitoring
    "numpy>=1.24.0",  # For vectorized read generation
]

[tool.setuptools]
packages = ["nanopore_simulator"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
# The findings skipped below are inherent to this tool's design rather than
# security defects. Each is intentional and not reachable from untrusted input:
#   B101 - assert statements used for internal invariants in non-hot paths.
#   B311 - the standard library RNG drives timing jitter, read sampling, and
#          manifest shuffling; none of these are security or cryptographic.
#   B404 / B603 / B607 - the generate and download paths deliberately invoke
#          local bioinformatics tools (badread, nanosim, ncbi datasets, gtdb)
#          via subprocess with argument lists (never shell=True) and resolve
#          executables by name on PATH.
#   B310 - genome downloads use urllib against fixed https GTDB/NCBI endpoints.
skips = ["B101", "B311", "B404", "B603", "B607", "B310"]